suit symbols yay

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -27,32 +27,32 @@ in first or second seat showed any 12+, with 0--11 HCP hands forced to open
 somehow.  In particular, 2-suited bids at the 1-level have a lot of
 attractions.
 
-Our next attempt was to consider the idea of a 12+ 1C opener, with all other
-openings 8--11.  This is fine in theory, but EBU regulations say that this 1C
+Our next attempt was to consider the idea of a 12+ 1$\clubsuit$ opener, with all other
+openings 8--11.  This is fine in theory, but EBU regulations say that this 1$\clubsuit$
 opener cannot have a 5+ card major suit without a longer minor.  This meant
-that we needed an opening-values 2C bid, and generally lost the point of the
+that we needed an opening-values 2$\clubsuit$ bid, and generally lost the point of the
 system.  We fell back upon a strong club structure.
 
-Given the strong C structure, we then looked at our other opening bids.  Our
+Given the strong $\clubsuit$ structure, we then looked at our other opening bids.  Our
 2-level openers are pre-emptive, and show either single-suiters or two-suiters.
-This is based upon the Suction convention: 2C shows D or both majors, 2D shows
-H or S\&C, 2H shows S or C\&D, and 2S shows H and a minor.  We don't have a way
-to show a S\&D two-suiter; this is a likely future use for 2NT.
+This is based upon the Suction convention: 2$\clubsuit$ shows $\diamondsuit$ or both majors, 2$\diamondsuit$ shows
+H or $\spadesuit$\&$\clubsuit$, 2$\heartsuit$ shows $\spadesuit$ or $\clubsuit$\&$\diamondsuit$, and 2$\spadesuit$ shows $\heartsuit$ and a minor.  We don't have a way
+to show a $\spadesuit$\&$\diamondsuit$ two-suiter; this is a likely future use for 2NT.
 
-Major suit openings are played as takeout bids.  This means that 1S promises 5+
-H and 0--3 S, with 1H promising 5+ S and 0--3 H.  These were, at one stage,
+Major suit openings are played as takeout bids.  This means that 1$\spadesuit$ promises 5+
+H and 0--3 $\spadesuit$, with 1$\heartsuit$ promising 5+ $\spadesuit$ and 0--3 $\heartsuit$.  These were, at one stage,
 4-card openings in the other major, but we found that this made bidding in
 competition too difficult.  In uncontested auctions, this has the great
-advantage that you gain a "free" cue-bid: after a 1S opening, 2S shows a good
-raise of H while 2H, 3H etc. are pre-emptive.
+advantage that you gain a ``free" cue-bid: after a 1$\spadesuit$ opening, 2$\spadesuit$ shows a good
+raise of $\heartsuit$ while 2$\heartsuit$, 3$\heartsuit$ etc. are pre-emptive.
 
 The next implication is that we need a way to show hands with 4+ in both
-majors.  This falls to 1NT; we have 2C/2D/2H/2S as weak bids "to play", and 2NT
+majors.  This falls to 1NT; we have 2$\clubsuit$/2$\diamondsuit$/2$\heartsuit$/2$\spadesuit$ as weak bids ``to play", and 2NT
 as a strong enquiry.  Bids in the major suits are primarily pre-emptive; 2NT
 asks for range and better major.  3m is strong and one-round forcing.
 
-1C includes balanced hands 16--19 and 23+ (we're using 2NT as a 20--22 balanced
-hand, for now).  The 1D opening, therefore, has to cover all opening hands that
+1$\clubsuit$ includes balanced hands 16--19 and 23+ (we're using 2NT as a 20--22 balanced
+hand, for now).  The 1$\diamondsuit$ opening, therefore, has to cover all opening hands that
 do not fall into one of the above categories.  It therefore includes:
 
 \begin{itemize}
@@ -61,8 +61,8 @@ do not fall into one of the above categories.  It therefore includes:
       major.
 \end{itemize}
 
-Responses to 1D are selected to allow the 1NT rebid, showing a weak NT opener,
-on all auctions.  Therefore: 1H = 0--7, 1S = 8+.  After interference, pass is
+Responses to 1$\diamondsuit$ are selected to allow the 1NT rebid, showing a weak NT opener,
+on all auctions.  Therefore: 1$\heartsuit$ = 0--7, 1$\spadesuit$ = 8+.  After interference, pass is
 weak; any other action promises 8+.
 
 So that's our one-level openings.  For two-level openers, we wanted them to be
@@ -72,8 +72,8 @@ defence to 1NT, or who suggested it as a structure for 2-level openings, but
 the fact remains that we like it.  Essentially, each 2-level bid shows either a
 weak 2 in the suit above OR the other two suits.  Of course, this leaves the
 non-touching pairs uncovered, and leaves you with two ways to show a pre-empt
-in clubs.  We soon thought of playing 2S as showing H and a minor (as opposed
-to the original C or H\&D).  This still left S\&D uncovered, but we decided to
+in clubs.  We soon thought of playing 2$\spadesuit$ as showing $\heartsuit$ and a minor (as opposed
+to the original $\clubsuit$ or $\heartsuit$\&$\diamondsuit$).  This still left $\spadesuit$\&$\diamondsuit$ uncovered, but we decided to
 cope.
 
 At this stage, our 2NT opening was fairly standard: 20--22 balanced or
@@ -85,25 +85,25 @@ more frequent, with transfer preference being used if responder has a strong
 hand.  If opener has the strong option, he can rebid 3NT.
 
 The next change (there's still more!) was to include GF two-suiters in our
-2-level openings.  This narrows the specification of the 1C opening, and is
+2-level openings.  This narrows the specification of the 1$\clubsuit$ opening, and is
 easy to specify: opener can rebid his opened suit (whichever it is) over any
 response.  In the 2NT case, this opening now shows GF (semi-)balanced, GF with
-S\&D, or weak with S\&D.  In the two-suited case, any rebid other than 3NT shows
+S\&$\diamondsuit$, or weak with $\spadesuit$\&$\diamondsuit$.  In the two-suited case, any rebid other than 3NT shows
 the strong hand, and any transfer break does also.
 
-Finally, our responses to 1C: initially, these were natural, promising a 4-card
-suit and 8+ (with any weak hands going via 1D).  Boring!  We then tried
-encrypted responses: 1H promised HA or HK, not both; 1S showed neither or both
-in H, and exactly one in S, and so on.  1NT was a positive with no potential
-key; 1D was the negative.  Opener would rebid NT if balanced, 2H to deny a
+Finally, our responses to 1$\clubsuit$: initially, these were natural, promising a 4-card
+suit and 8+ (with any weak hands going via 1$\diamondsuit$).  Boring!  We then tried
+encrypted responses: 1$\heartsuit$ promised HA or HK, not both; 1$\spadesuit$ showed neither or both
+in $\heartsuit$, and exactly one in $\spadesuit$, and so on.  1NT was a positive with no potential
+key; 1$\diamondsuit$ was the negative.  Opener would rebid NT if balanced, 2$\heartsuit$ to deny a
 potential key, and anything else to show a potential place to play if holding
 the key K or denying if holding the key A.  We ditched this structure not
 because it doesn't work but because it frequently (read nearly always) ends up
 at the 3-level before either hand has actually mentioned a suit, which could
 still be only 4 cards.
 
-We now play a far more elegant structure, similar to our responses to 1D: 1D is
-negative (0--7), 1H is positive distributional (8+), and 1S is positive balanced
+We now play a far more elegant structure, similar to our responses to 1$\diamondsuit$: 1$\diamondsuit$ is
+negative (0--7), 1$\heartsuit$ is positive distributional (8+), and 1$\spadesuit$ is positive balanced
 (8+, again).
 
 As for the system name: suction is measured in Pascals, and the system is
@@ -125,15 +125,15 @@ encrypted.  It went from there.
 \subsubsection{1 level}
 
 \begin{tabular}{ll}
-1C  & 12--15 balanced or 10--15 unbalanced, no five-card major and at most one \\
+1$\clubsuit$  & 12--15 balanced or 10--15 unbalanced, no five-card major and at most one \\
 	 & four-card major.\\
-1D  & 16+; excludes balanced hands 24+ and game-forcing two-suited hands.\\
-1H  & 10--15 unbalanced, with 4+ spades and additional constraints: first or
+1$\diamondsuit$  & 16+; excludes balanced hands 24+ and game-forcing two-suited hands.\\
+1$\heartsuit$  & 10--15 unbalanced, with 4+ spades and additional constraints: first or
       second seat\\
 	 & non-vulnerable, possible canape with hearts, but 5+ spades if
       not holding 4+ hearts. \\
 	 & Other positions, or vulnerable, 5+ spades and 0--3 hearts.\\
-1S  & 10--15 unbalanced, 5+ hearts, and 0--3 spades.\\
+1$\spadesuit$  & 10--15 unbalanced, 5+ hearts, and 0--3 spades.\\
 1NT & 9--11 balanced in first or second non-vulnerable; otherwise 10--15
       unbalanced with \\
 	 & 4+ in both majors.\\
@@ -142,11 +142,11 @@ encrypted.  It went from there.
 \subsubsection{2 level}
 
 \begin{tabular}{ll}
-2C  & weak with D, single suited OR weak with H\&S, 4--4 or better OR GF with H\&S.\\
-2D  & weak with H, single suited OR weak with S\&C, 5+/4+ or better OR GF with S\&C.\\
-2H  & weak with S, single suited OR weak with C\&D, 4+/4+ OR GF with C\&D.\\
-2S  & weak with H and a minor OR GF with H and a minor. 4+/4+.\\
-2NT & weak with D\&S, 4+/4+, OR 24+ balanced OR GF with D\&S.\\
+2$\clubsuit$  & weak with $\diamondsuit$, single suited OR weak with $\heartsuit$\&$\spadesuit$, 4--4 or better OR GF with $\heartsuit$\&$\spadesuit$.\\
+2$\diamondsuit$  & weak with $\heartsuit$, single suited OR weak with $\spadesuit$\&$\clubsuit$, 5+/4+ or better OR GF with $\spadesuit$\&$\clubsuit$.\\
+2$\heartsuit$  & weak with $\spadesuit$, single suited OR weak with $\clubsuit$\&$\diamondsuit$, 4+/4+ OR GF with $\clubsuit$\&$\diamondsuit$.\\
+2$\spadesuit$  & weak with $\heartsuit$ and a minor OR GF with $\heartsuit$ and a minor. 4+/4+.\\
+2NT & weak with $\diamondsuit$\&$\spadesuit$, 4+/4+, OR 24+ balanced OR GF with $\diamondsuit$\&$\spadesuit$.\\
 \end{tabular}
 
 \subsubsection{Higher openings}
@@ -163,16 +163,16 @@ Higher-level openings & natural. \\
 \subsection{Responses \& rebids}
 
 \begin{itemize}
-\item 1C:
+\item 1$\clubsuit$:
 	\begin{itemize}
-   \item 1D = 0--7, no 6-card suit
-   \item 1H = 8--15 any
-   \item 1S = 15+ any, game-forcing.
+   \item 1$\diamondsuit$ = 0--7, no 6-card suit
+   \item 1$\heartsuit$ = 8--15 any
+   \item 1$\spadesuit$ = 15+ any, game-forcing.
 		\begin{itemize}
       \item major suit bids promise exactly 4; either 4-4-4-1 with singleton other
          major or has a longer minor (as there's no other hand shape that fits the
          opening and has exactly one 4-card major)
-      \item 1NT rebid = 12--15 balanced; see "Continuations after 1NT".
+      \item 1NT rebid = 12--15 balanced; see ``Continuations after 1NT".
       \item minor suit bids deny a 4-card major.
 		\end{itemize}
    \item 2x = 6+ card suit, 0--7. Non-forcing.
@@ -182,23 +182,23 @@ Higher-level openings & natural. \\
 		\end{itemize}
 	\end{itemize}
 
-\item 1D:
+\item 1$\diamondsuit$:
 	\begin{itemize}
-   \item 1H = 0--7, no 6-card suit.
-   \item 1S = 8+, game-forcing.
+   \item 1$\heartsuit$ = 0--7, no 6-card suit.
+   \item 1$\spadesuit$ = 8+, game-forcing.
 		\begin{itemize}
-      \item 1NT rebid = 16--19 balanced; see "Continuations after 1NT".
+      \item 1NT rebid = 16--19 balanced; see ``Continuations after 1NT".
       \item Simple suit rebids are suction-style, showing either the suit above
-         (single-suited) or the other two (C$\rightarrow$ D or majors; D-> H or (S\&minor); H->
-         S or minors; S$\rightarrow$C or (H\&minor). Could be 3-suited, short in the suit
-         above. These are shown (2C-2D-3C: short D. 2D-2H-2S: short H. 2H-2S-3H:
-         short S. 2S-3C-3S: short C.).
+         (single-suited) or the other two ($\clubsuit$$\rightarrow$ $\diamondsuit$ or majors; $\diamondsuit$$\rightarrow$ $\heartsuit$ or ($\spadesuit$\&minor); $\heartsuit$$\rightarrow$
+         $\spadesuit$ or minors; $\spadesuit$$\rightarrow$$\clubsuit$ or ($\heartsuit$\&minor). Could be 3-suited, short in the suit
+         above. These are shown (2$\clubsuit$-2$\diamondsuit$-3$\clubsuit$: short $\diamondsuit$. 2$\diamondsuit$-2$\heartsuit$-2$\spadesuit$: short $\heartsuit$. 2$\heartsuit$-2$\spadesuit$-3$\heartsuit$:
+         short $\spadesuit$. 2$\spadesuit$-3$\clubsuit$-3$\spadesuit$: short $\clubsuit$.).
 			\begin{itemize}
 			\item Responder will bid the next suit (relay). Opener then rebids NT with the
 				single-suited hand, or a suit with the two-suited option.
 			\end{itemize}
       \item Jump suit rebids are GF, single-suited.
-      \item 2NT rebid = 20--23 balanced; see "Continuations after 2NT".
+      \item 2NT rebid = 20--23 balanced; see ``Continuations after 2NT".
 		\end{itemize}
    \item 2x = 6+ card suit, 0--7. Non-forcing.
 		\begin{itemize}
@@ -206,167 +206,167 @@ Higher-level openings & natural. \\
 		\end{itemize}
 	\end{itemize}
 
-\item 1H (if denying H):
+\item 1$\heartsuit$ (if denying $\heartsuit$):
 	\begin{itemize}
-   \item 1S/2S/3S/4S = to play/limit raises/to play.
+   \item 1$\spadesuit$/2$\spadesuit$/3$\spadesuit$/4$\spadesuit$ = to play/limit raises/to play.
    \item 1NT = 1-round force.
-   \item 2C/D = natural, forcing.
-   \item 2H = GF+ raise, neither or both of S AK.
-   \item 2NT = good raise, with exactly one of S AK.
+   \item 2$\clubsuit$/$\diamondsuit$ = natural, forcing.
+   \item 2$\heartsuit$ = GF+ raise, neither or both of $\spadesuit$ AK.
+   \item 2NT = good raise, with exactly one of $\spadesuit$ AK.
 		\begin{itemize}
-      \item Next bid shows 0/1 loser and the S K, or 2/3 losers and the SA.
-         Rebidding S denies the other top honour.
+      \item Next bid shows 0/1 loser and the $\spadesuit$ K, or 2/3 losers and the SA.
+         Rebidding $\spadesuit$ denies the other top honour.
 		\end{itemize}
-   \item 3C/3D = fit jump.
-   \item 3H = GF raise, two of AKQ.
-   \item 4C/D/H = splinter agreeing spades
+   \item 3$\clubsuit$/3$\diamondsuit$ = fit jump.
+   \item 3$\heartsuit$ = GF raise, two of AKQ.
+   \item 4$\clubsuit$/$\diamondsuit$/$\heartsuit$ = splinter agreeing spades
 	\end{itemize}
 
-\item 1S:
+\item 1$\spadesuit$:
 	\begin{itemize}
-   \item 2H/3H/4H = to play/limit raise/to play.
+   \item 2$\heartsuit$/3$\heartsuit$/4$\heartsuit$ = to play/limit raise/to play.
    \item 1NT = 1-round force.
-   \item 2C/D = natural, forcing.
-   \item 2S = GF+ raise, neither or both of H AK.
-   \item 2NT = good raise, with exactly one of H AK.
+   \item 2$\clubsuit$/$\diamondsuit$ = natural, forcing.
+   \item 2$\spadesuit$ = GF+ raise, neither or both of $\heartsuit$ AK.
+   \item 2NT = good raise, with exactly one of $\heartsuit$ AK.
 		\begin{itemize}
-      \item Next bid shows 0/1 loser and the H K, or 2/3 losers and the HA.
-         Rebidding H denies the other top honour.
+      \item Next bid shows 0/1 loser and the $\heartsuit$ K, or 2/3 losers and the HA.
+         Rebidding $\heartsuit$ denies the other top honour.
 		\end{itemize}
-   \item 3C/3D = fit jump.
-   \item 3S = GF raise, two of AKQ.
-   \item 4C/D/S = splinter agreeing hearts
+   \item 3$\clubsuit$/3$\diamondsuit$ = fit jump.
+   \item 3$\spadesuit$ = GF raise, two of AKQ.
+   \item 4$\clubsuit$/$\diamondsuit$/$\spadesuit$ = splinter agreeing hearts
 	\end{itemize}
 
-\item 1H if not denying H:
+\item 1$\heartsuit$ if not denying $\heartsuit$:
 	\begin{itemize}
-   \item 1S = forcing enquiry.
+   \item 1$\spadesuit$ = forcing enquiry.
 		\begin{itemize}
       \item 1NT = both majors. Continuations as after artificial 1NT opening.
 		\end{itemize}
    \item 1NT = non-forcing.
-   \item 2C/D = natural, forcing.
-   \item 2H = GF+ raise, neither or both of S AK.
-   \item 2S/3S/4S = limit raises/to play.
-   \item 2NT = good raise, with exactly one of S AK.
+   \item 2$\clubsuit$/$\diamondsuit$ = natural, forcing.
+   \item 2$\heartsuit$ = GF+ raise, neither or both of $\spadesuit$ AK.
+   \item 2$\spadesuit$/3$\spadesuit$/4$\spadesuit$ = limit raises/to play.
+   \item 2NT = good raise, with exactly one of $\spadesuit$ AK.
 		\begin{itemize}
-      \item Next bid shows 0/1 loser and the S K, or 2/3 losers and the SA.
-         Rebidding S denies the other top honour.
+      \item Next bid shows 0/1 loser and the $\spadesuit$ K, or 2/3 losers and the SA.
+         Rebidding $\spadesuit$ denies the other top honour.
 		\end{itemize}
-   \item 3C/3D = fit jump.
-   \item 3H = GF raise, two of AKQ.
-   \item 4C/D/H = splinter agreeing spades
+   \item 3$\clubsuit$/3$\diamondsuit$ = fit jump.
+   \item 3$\heartsuit$ = GF raise, two of AKQ.
+   \item 4$\clubsuit$/$\diamondsuit$/$\heartsuit$ = splinter agreeing spades
 	\end{itemize}
 
 \item 1NT if artificial:
 	\begin{itemize}
-   \item 2C/D: weak, to play.
-   \item 2H/S: preference, to play.
+   \item 2$\clubsuit$/$\diamondsuit$: weak, to play.
+   \item 2$\heartsuit$/$\spadesuit$: preference, to play.
    \item 2NT: forcing enquiry:
 		\begin{itemize}
-      \item 3C/D strong, 3H/S weak. 3C/H better H, 3D/S better S.
+      \item 3$\clubsuit$/$\diamondsuit$ strong, 3$\heartsuit$/$\spadesuit$ weak. 3$\clubsuit$/$\heartsuit$ better $\heartsuit$, 3$\diamondsuit$/$\spadesuit$ better $\spadesuit$.
 		\end{itemize}
-   \item 3C/D: strong, good suit.
-   \item 3H/S: good raise.
+   \item 3$\clubsuit$/$\diamondsuit$: strong, good suit.
+   \item 3$\heartsuit$/$\spadesuit$: good raise.
 	\end{itemize}
 
-\item 2C:
+\item 2$\clubsuit$:
 	\begin{itemize}
-   \item 2D = pass/correct.
+   \item 2$\diamondsuit$ = pass/correct.
 		\begin{itemize}
       \item 2NT = GF opening.
 		\end{itemize}
-   \item 2H = forcing; major-focused.
+   \item 2$\heartsuit$ = forcing; major-focused.
 		\begin{itemize}
-      \item 2S = better S
+      \item 2$\spadesuit$ = better $\spadesuit$
       \item 2NT = both equal
-      \item 3D = weak, diamonds.
-      \item 3C = GF opening
-      \item 3H = better H
+      \item 3$\diamondsuit$ = weak, diamonds.
+      \item 3$\clubsuit$ = GF opening
+      \item 3$\heartsuit$ = better $\heartsuit$
 		\end{itemize}
    \item 2NT = forcing, how good are your diamonds?
 		\begin{itemize}
-      \item 3C = GF opening
-      \item 3D = bad diamonds
-      \item 3H = 2-suited
-      \item 3S = decent diamonds
+      \item 3$\clubsuit$ = GF opening
+      \item 3$\diamondsuit$ = bad diamonds
+      \item 3$\heartsuit$ = 2-suited
+      \item 3$\spadesuit$ = decent diamonds
       \item 3NT = top-of-range diamonds
 		\end{itemize}
 	\end{itemize}
 
-\item 2D:
+\item 2$\diamondsuit$:
 	\begin{itemize}
-   \item 2H = pass/correct.
+   \item 2$\heartsuit$ = pass/correct.
 		\begin{itemize}
       \item 2NT = GF opening.
 		\end{itemize}
-   \item 2S = forcing, C/S-focused.
+   \item 2$\spadesuit$ = forcing, $\clubsuit$/$\spadesuit$-focused.
 		\begin{itemize}
       \item 2NT = both equal.
-      \item 3C = better C.
-      \item 3D = GF opening.
-      \item 3H = better S, minimum.
-      \item 3S = better S, maximum.
+      \item 3$\clubsuit$ = better $\clubsuit$.
+      \item 3$\diamondsuit$ = GF opening.
+      \item 3$\heartsuit$ = better $\spadesuit$, minimum.
+      \item 3$\spadesuit$ = better $\spadesuit$, maximum.
 		\end{itemize}
    \item 2NT = forcing, how good are your hearts?
 		\begin{itemize}
-      \item 3C = two-suited.
-      \item 3D = GF opening.
-      \item 3H = dire, single-suited.
-      \item 3S = decent, single-suited.
+      \item 3$\clubsuit$ = two-suited.
+      \item 3$\diamondsuit$ = GF opening.
+      \item 3$\heartsuit$ = dire, single-suited.
+      \item 3$\spadesuit$ = decent, single-suited.
       \item 3NT = top-of-range hearts.
 		\end{itemize}
 	\end{itemize}
 
-\item 2H:
+\item 2$\heartsuit$:
 	\begin{itemize}
-   \item 2S = pass/correct.
+   \item 2$\spadesuit$ = pass/correct.
 		\begin{itemize}
       \item 2NT = GF opening.
 		\end{itemize}
-   \item 3C = forcing, C/D-focused.
+   \item 3$\clubsuit$ = forcing, $\clubsuit$/$\diamondsuit$-focused.
 		\begin{itemize}
-      \item 3D = better D.
-      \item 3H = GF opening.
-      \item 3S = single-suited.
+      \item 3$\diamondsuit$ = better $\diamondsuit$.
+      \item 3$\heartsuit$ = GF opening.
+      \item 3$\spadesuit$ = single-suited.
       \item 3NT = both equal.
-      \item 4C = better C.
+      \item 4$\clubsuit$ = better $\clubsuit$.
 		\end{itemize}
    \item 2NT = forcing, how good are your spades?
 		\begin{itemize}
-      \item 3C = two-suited.
-      \item 3D = dire spades.
-      \item 3H = GF opening.
-      \item 3S = decent, single-suited.
+      \item 3$\clubsuit$ = two-suited.
+      \item 3$\diamondsuit$ = dire spades.
+      \item 3$\heartsuit$ = GF opening.
+      \item 3$\spadesuit$ = decent, single-suited.
       \item 3NT = top-of-range spades.
 		\end{itemize}
 	\end{itemize}
 
-\item 2S:
+\item 2$\spadesuit$:
 	\begin{itemize}
    \item 2NT = forcing, which minor?
 		\begin{itemize}
-      \item 3C/D: that minor
-      \item 3H: GF, H\&C
-      \item 3S: GF, H\&D
+      \item 3$\clubsuit$/$\diamondsuit$: that minor
+      \item 3$\heartsuit$: GF, $\heartsuit$\&$\clubsuit$
+      \item 3$\spadesuit$: GF, $\heartsuit$\&$\diamondsuit$
 		\end{itemize}
-   \item 3C/D/H, etc: to play (pass/correct if a minor).
-   \item 3S = setting H, asking for information
+   \item 3$\clubsuit$/$\diamondsuit$/$\heartsuit$, etc: to play (pass/correct if a minor).
+   \item 3$\spadesuit$ = setting $\heartsuit$, asking for information
 	\end{itemize}
 
 \item 2NT:
 	\begin{itemize}
-   \item 3D/3S: simple preference
+   \item 3$\diamondsuit$/3$\spadesuit$: simple preference
 		\begin{itemize}
       \item After weak preference, any rebid shows GF hand.
 		\end{itemize}
-   \item 3C/3H: transfer preference; stronger.
+   \item 3$\clubsuit$/3$\heartsuit$: transfer preference; stronger.
 		\begin{itemize}
       \item Opener breaks transfer if GF two-suiter; suit has been set so bid controls.
       \item A 3NT rebid shows 24+ balanced
 			\begin{itemize}
-         \item 3C/D = 2 under transfers to H/S
-         \item 3H/S = Swiss for no trumps
+         \item 3$\clubsuit$/$\diamondsuit$ = 2 under transfers to $\heartsuit$/$\spadesuit$
+         \item 3$\heartsuit$/$\spadesuit$ = Swiss for no trumps
          \item 4N = Quantitative
          \item 5N = Quantitative (for 6 or 7)
 			\end{itemize}
@@ -377,11 +377,11 @@ Higher-level openings & natural. \\
 	\begin{itemize}
 	\item pass: stops in 3 suits
 	\item clubs at any level: pass or correct
-	\item 4D: asks for singletons
+	\item 4$\diamondsuit$: asks for singletons
 		\begin{itemize}
-		\item 4H/S: singleton in that suit
+		\item 4$\heartsuit$/$\spadesuit$: singleton in that suit
 		\item 4N: no singletons
-		\item 5C/D: singleton in the other suit
+		\item 5$\clubsuit$/$\diamondsuit$: singleton in the other suit
 		\end{itemize}
 	\end{itemize}
 
@@ -389,15 +389,15 @@ Higher-level openings & natural. \\
 
 \item 4NT:
 	\begin{itemize}
-	\item 5C: No aces
-	\item 5D: Club ace or Heart, Diamond and Spade aces
-	\item 5H: Diamond ace or Club, Heart and Spade aces
-	\item 5S: Heart ace or Club, Diamond and Spade aces
+	\item 5$\clubsuit$: No aces
+	\item 5$\diamondsuit$: Club ace or Heart, Diamond and Spade aces
+	\item 5$\heartsuit$: Diamond ace or Club, Heart and Spade aces
+	\item 5$\spadesuit$: Heart ace or Club, Diamond and Spade aces
 	\item 5N: Two aces not including Spades
-	\item 6C: Spade ace or Club, Diamond and Heart aces
-	\item 6D: Spade and Club aces
-	\item 6H: Spade and Diamond aces
-	\item 6S: Spade and Heart aces
+	\item 6$\clubsuit$: Spade ace or Club, Diamond and Heart aces
+	\item 6$\diamondsuit$: Spade and Club aces
+	\item 6$\heartsuit$: Spade and Diamond aces
+	\item 6$\spadesuit$: Spade and Heart aces
 	\end{itemize}
 
 \end{itemize}
@@ -410,65 +410,65 @@ depending on range.
 
 \begin{itemize}
 
-\item 2D and 2H are transfers; transfer breaks apply with any 4-card fit.  2NT
+\item 2$\diamondsuit$ and 2$\heartsuit$ are transfers; transfer breaks apply with any 4-card fit.  2NT
 shows 4/5-card support, no side 4-card suit, and a maximum.  Other suits
 show 4 cards, and 4-card support with a maximum.  A simple jump acceptance
 shows 4-card support and a minimum.
 
-\item 2S is a range enquiry/transfer to C.  2NT shows a minimum, after which 3C is to
-play and other bids are GF, either cues or Swiss.  3C shows any maximum, and
-can be passed if 2S was weak takeout.
+\item 2$\spadesuit$ is a range enquiry/transfer to $\clubsuit$.  2NT shows a minimum, after which 3$\clubsuit$ is to
+play and other bids are GF, either cues or Swiss.  3$\clubsuit$ shows any maximum, and
+can be passed if 2$\spadesuit$ was weak takeout.
 
-\item 2NT is a transfer to diamonds; 3C is the only available super-accept.
+\item 2NT is a transfer to diamonds; 3$\clubsuit$ is the only available super-accept.
 
-\item 3C promises a long suit that may need some help to run.  Opener should
+\item 3$\clubsuit$ promises a long suit that may need some help to run.  Opener should
 pass, or bid 3NT with (e.g.) Kxx in the suit.
 
-\item 3D is 5--5 in the majors, at least invitational.
+\item 3$\diamondsuit$ is 5--5 in the majors, at least invitational.
 
 \item 4N is blackwood.
 
-\item 2C is where it gets distinctive.  This is 5-card modified puppet Keri, which allows the system to be used with weak diamond hands with tolerance for at least one major (e.g. 4=0=6=3 pattern with very limited values).
+\item 2$\clubsuit$ is where it gets distinctive.  This is 5-card modified puppet Keri, which allows the system to be used with weak diamond hands with tolerance for at least one major (e.g. 4=0=6=3 pattern with very limited values).
 \end{itemize}
 
 \paragraph{Responses to 5-card puppet Keri}
 
 	\begin{itemize}
-	\item 2H/S with a 5-card major
+	\item 2$\heartsuit$/$\spadesuit$ with a 5-card major
 		\begin{itemize}
-		\item 3D to play
+		\item 3$\diamondsuit$ to play
 		\item other rebids are as after this sequence in 5 card puppet stayman.
 		\end{itemize}
-	\item 2D with all other hands. 
+	\item 2$\diamondsuit$ with all other hands. 
 		\begin{itemize}
 		\item Pass if weak with diamonds
-		\item 2H = 4 spades; may have 4 hearts.
+		\item 2$\heartsuit$ = 4 spades; may have 4 hearts.
 			\begin{itemize}
-			\item 2S: forcing; promises 4 hearts.
+			\item 2$\spadesuit$: forcing; promises 4 hearts.
 				\begin{itemize}
 				\item 2NT/3NT: inv/GF, not 4 hearts.
-				\item 3C/3D: 4 hearts, feature in suit bid; GF
-				\item 3H/4H: inv/GF, 4 hearts.
-				\item 3S: GF, 4 hearts, auto-Swiss.
-				\item 4C/4D: GF, 4 hearts, Swiss.
+				\item 3$\clubsuit$/3$\diamondsuit$: 4 hearts, feature in suit bid; GF
+				\item 3$\heartsuit$/4$\heartsuit$: inv/GF, 4 hearts.
+				\item 3$\spadesuit$: GF, 4 hearts, auto-Swiss.
+				\item 4$\clubsuit$/4$\diamondsuit$: GF, 4 hearts, Swiss.
 				\end{itemize}
 			\item 2NT/3NT: min/max, denies a 4-card major.
-			\item 3C/3D/3H: 4 spades, feature in suit bid; max.
-			\item 3S/4S: min/max, 4 spades.
-			\item 4C/4D: max, non-serious Swiss.
+			\item 3$\clubsuit$/3$\diamondsuit$/3$\heartsuit$: 4 spades, feature in suit bid; max.
+			\item 3$\spadesuit$/4$\spadesuit$: min/max, 4 spades.
+			\item 4$\clubsuit$/4$\diamondsuit$: max, non-serious Swiss.
 			\end{itemize}
 
-		\item 2S = 4 hearts; denies 4 spades.
+		\item 2$\spadesuit$ = 4 hearts; denies 4 spades.
 			\begin{itemize}
-			\item 2NT/3NT: min/max, denies 4 H.
-			\item 3C/3D: 4 hearts, feature in suit bid, max.
-			\item 3H/4H: min/max, 4 hearts.
-			\item 3S: 4 hearts, maximum, auto-Swiss.
-			\item 4C/4D: GF, 4 hearts, Swiss.
+			\item 2NT/3NT: min/max, denies 4 $\heartsuit$.
+			\item 3$\clubsuit$/3$\diamondsuit$: 4 hearts, feature in suit bid, max.
+			\item 3$\heartsuit$/4$\heartsuit$: min/max, 4 hearts.
+			\item 3$\spadesuit$: 4 hearts, maximum, auto-Swiss.
+			\item 4$\clubsuit$/4$\diamondsuit$: GF, 4 hearts, Swiss.
 			\end{itemize}
 
 		\item 2NT = 3--3 majors; invitational strength.
-		\item 3C/D = 3--3 majors, GF, values in the minor.
+		\item 3$\clubsuit$/$\diamondsuit$ = 3--3 majors, GF, values in the minor.
 		\item 3NT=3--3 majors, GF.
 		\end{itemize}
 	\end{itemize}
@@ -486,32 +486,32 @@ We play a modified form of suction as the escape after 1NT-X.
 		\item bid 4 card suits up the line
 		\end{itemize}
 	\end{itemize}
-\item XX forces 2C, weak with clubs or the reds
+\item XX forces 2$\clubsuit$, weak with clubs or the reds
 	\begin{itemize}
-	\item 2C forced
+	\item 2$\clubsuit$ forced
 		\begin{itemize}
 		\item Pass with clubs
-		\item 2D with D\&H
+		\item 2$\diamondsuit$ with $\diamondsuit$\&$\heartsuit$
 		\end{itemize}
 	\end{itemize}
-\item 2C forces 2D, weak with diamonds or the majors
+\item 2$\clubsuit$ forces 2$\diamondsuit$, weak with diamonds or the majors
 	\begin{itemize}
 	\item Pass with 5 clubs
-	\item 2D with all other hands
+	\item 2$\diamondsuit$ with all other hands
 		\begin{itemize}
 		\item Pass with diamonds
-		\item 2H with the majors
+		\item 2$\heartsuit$ with the majors
 		\end{itemize}
 	\end{itemize}
-\item 2D forces 2H, weak with hearts
+\item 2$\diamondsuit$ forces 2$\heartsuit$, weak with hearts
 	\begin{itemize}
 	\item Pass with 5 diamonds
-	\item 2H all other hands
+	\item 2$\heartsuit$ all other hands
 	\end{itemize}
-\item 2H forces 2S, weak with spades
+\item 2$\heartsuit$ forces 2$\spadesuit$, weak with spades
 	\begin{itemize}
 	\item Pass with 5 hearts
-	\item 2S all other hands
+	\item 2$\spadesuit$ all other hands
 	\end{itemize}
 \end{itemize}
 
@@ -524,9 +524,9 @@ Lebensohl:
 \item suits at the 3 level: GF, natural
 \item direct cue: staymanic, denies a stop
 \item 3N: natural, denies a stop
-\item 2N: puppet to 3C
+\item 2N: puppet to 3$\clubsuit$
 	\begin{itemize}
-	\item 3C forced
+	\item 3$\clubsuit$ forced
 		\begin{itemize}
 		\item suits below the cue: to play
 		\item suits above the cue: invitational, natural
@@ -539,41 +539,41 @@ Lebensohl:
 \section{Continuations after 2NT}
 
 \begin{itemize}
-\item 3C: advanced 5-card puppet Stayman
+\item 3$\clubsuit$: advanced 5-card puppet Stayman
 	\begin{itemize}
-   \item 3H/S shows 5 cards.
-   \item 3D promises 4 hearts or 3 spades
+   \item 3$\heartsuit$/$\spadesuit$ shows 5 cards.
+   \item 3$\diamondsuit$ promises 4 hearts or 3 spades
 		\begin{itemize}
-      \item 3H: 0--3 hearts, 4 spades
+      \item 3$\heartsuit$: 0--3 hearts, 4 spades
 			\begin{itemize}
          \item 3NT: 4 hearts
-         \item 4C/D: Swiss
-         \item 4S: to play.
+         \item 4$\clubsuit$/$\diamondsuit$: Swiss
+         \item 4$\spadesuit$: to play.
 			\end{itemize}
-      \item 3S: 4 hearts, 0--3 or 5 spades
+      \item 3$\spadesuit$: 4 hearts, 0--3 or 5 spades
 			\begin{itemize}
-         \item 3NT: 3/4 spades (Responder bids 4S if 5/4)
-         \item 4C/D: Swiss
-         \item 4H: to play.
+         \item 3NT: 3/4 spades (Responder bids 4$\spadesuit$ if 5/4)
+         \item 4$\clubsuit$/$\diamondsuit$: Swiss
+         \item 4$\heartsuit$: to play.
 			\end{itemize}
       \item 3N: 3--3 majors
-      \item 4C: 4--4 majors, invitational
-      \item 4D: 4--4 majors, GF
+      \item 4$\clubsuit$: 4--4 majors, invitational
+      \item 4$\diamondsuit$: 4--4 majors, GF
 		\end{itemize}
    \item 3NT denies a 4-card major.
 	\end{itemize}
 
-\item 3D/3H: transfers.  Superaccept with any 4-card fit; note that 3NT is a
+\item 3$\diamondsuit$/3$\heartsuit$: transfers.  Superaccept with any 4-card fit; note that 3NT is a
 superaccept that still allows the use of Swiss.
 
-\item 3S: minor-suit Stayman.  Asks for a 4- or 5-card minor.
+\item 3$\spadesuit$: minor-suit Stayman.  Asks for a 4- or 5-card minor.
 	\begin{itemize}
    \item 3NT: no 4-card minor.
-   \item 4C/4D: 4 cards.
-   \item 4H/4S: 5 cards in the corresponding minor.
+   \item 4$\clubsuit$/4$\diamondsuit$: 4 cards.
+   \item 4$\heartsuit$/4$\spadesuit$: 5 cards in the corresponding minor.
 	\end{itemize}
 
-\item 4C/D: Swiss
+\item 4$\clubsuit$/$\diamondsuit$: Swiss
 \item 4N: Quantitative
 \end{itemize}
 
@@ -603,12 +603,12 @@ game-forcing raise in responder's hand.  Rare!
 
 Opener's rebid shows a first-round control; the location of this control is
 encrypted.  We use the concept of the shift here: a shift of 1 indicates the
-next suit up (C from NT or S, D from C, H from D, S from H).  A shift of 2
+next suit up ($\clubsuit$ from NT or $\spadesuit$, $\diamondsuit$ from $\clubsuit$, $\heartsuit$ from $\diamondsuit$, $\spadesuit$ from $\heartsuit$).  A shift of 2
 indicates the next suit after that, and a shift of 3 shows the final suit.
 Each cue therefore says nothing about control in the suit bid.
 
-The sum of the shift and the HCP of opener's honour is 5.  Opener, holding a D
-control, therefore bids C with the trump A, S/NT with the trump K, and H with
+The sum of the shift and the HCP of opener's honour is 5.  Opener, holding a $\diamondsuit$
+control, therefore bids $\clubsuit$ with the trump A, $\spadesuit$/NT with the trump K, and $\heartsuit$ with
 the trump Q.
 
 Of course, Blackwood goes funny here too.  You only need to show 0--3 keycards,
@@ -625,7 +625,7 @@ Once a suit is agreed and a GF is established, new suits are cues.
 
 \subsection{General Swiss}
 
-4C/4D, once a game-force is established and suit agreed, are slam tries, based
+4$\clubsuit$/4$\diamondsuit$, once a game-force is established and suit agreed, are slam tries, based
 on control points
 
 Control points are 2 for an ace, 1 for a king/singleton, and 1 for the queen of
@@ -634,10 +634,10 @@ outside singletons for kings, but care must be taken to avoid double-counting.
 11 CPs are necessary for a small slam; 13 for a grand.
 
 \begin{itemize}
-\item 4C: 4 or 6 (exceptionally 8) control points)
+\item 4$\clubsuit$: 4 or 6 (exceptionally 8) control points)
 	\begin{itemize}
    \item trump suit: 0--4 CPs
-   \item 4D: 5/6 CP, relay
+   \item 4$\diamondsuit$: 5/6 CP, relay
 		\begin{itemize}
       \item trump suit: 4 CPs
       \item suits: 6 CP, lowest king/singleton
@@ -647,10 +647,10 @@ outside singletons for kings, but care must be taken to avoid double-counting.
    \item grand slam: 10 CP
 	\end{itemize}
 
-\item 4D: 5 or 7 (exceptionally 9) control points)
+\item 4$\diamondsuit$: 5 or 7 (exceptionally 9) control points)
 	\begin{itemize}
    \item trump suit: 0--3 CPs
-   \item 4H: 4/5 CP, relay
+   \item 4$\heartsuit$: 4/5 CP, relay
 		\begin{itemize}
       \item trump suit: 5 CPs
       \item suits: 7 CP, lowest king/singleton
@@ -666,7 +666,7 @@ appropriate level. If your partner signs off and you have 2 unshown CPs so far,
 raise one level.
 
 If the hand bidding Swiss has shown a GF, add 2 to all numbers. If it has shown
-a weak hand (opening at the 2 level or giving a 0--7 response to 1D), subtract 2
+a weak hand (opening at the 2 level or giving a 0--7 response to 1$\diamondsuit$), subtract 2
 from all numbers.
 
 \section{Competitive bidding}
@@ -697,7 +697,7 @@ minor-suit opening.
 
 Jump overcalls are weak; jump overcalls of a major suit over a minor-suit
 opening may include the other minor (possible canape).  Similarly, jump
-overcalls of 3C over a 1 of a major opening could include D.
+overcalls of 3$\clubsuit$ over a 1 of a major opening could include $\diamondsuit$.
 
 Jump cuebids are stopper-asking for 3NT; they promise a long running suit.  An
 overcall of 3NT promises a long running suit and a stopper.
@@ -728,52 +728,52 @@ non-touching two suiter.
 Suction, constructive values. Double shows the suction bid in their suit and 2N
 is natural.
 
-\subsubsection{Multi 2D}
+\subsubsection{Multi 2$\diamondsuit$}
 
 Dixon:
 
 \begin{itemize}
 \item X: 16+
-\item 2H/S: takeout of the other major
+\item 2$\heartsuit$/$\spadesuit$: takeout of the other major
 \item 2N: 16-18 bal, stops in both majors.
 	\begin{itemize}
-	\item Responses as "Continuations after 2NT"
+	\item Responses as ``Continuations after 2NT"
 	\end{itemize}
 \item 3x: intermediate, natural
 \end{itemize}
 
 \subsubsection{Natural weak openings}
 
-Double is for takeout up to 4H. After a weak two and a takeout double, there
-are lebensohl responses. 4N is takeout over 4S and a big two suiter otherwise.
+Double is for takeout up to 4$\heartsuit$. After a weak two and a takeout double, there
+are lebensohl responses. 4N is takeout over 4$\spadesuit$ and a big two suiter otherwise.
 
 \section{Dealing with interference}
 
-\subsection{Direct interference over 1C}
+\subsection{Direct interference over 1$\clubsuit$}
 
 \begin{itemize}
-\item 1C-(X) (penalty interest (showing 16+):
+\item 1$\clubsuit$-(X) (penalty interest (showing 16+):
 	\begin{itemize}
    \item Redouble creates a game-force, and indicates that the double may not have been 
       a winning action.
    \item Pass forces redouble; either to play or with a two-suiter not including clubs.
-   \item 1D/1H are transfers to 1H/1S.  Note that opener may pass these if holding a 5-card 
+   \item 1$\diamondsuit$/1$\heartsuit$ are transfers to 1$\heartsuit$/1$\spadesuit$.  Note that opener may pass these if holding a 5-card 
       suit.
 	\end{itemize}
-\item 1C-(X) (showing C):
+\item 1$\clubsuit$-(X) (showing $\clubsuit$):
 	\begin{itemize}
    \item Redouble creates a game-force; passes are now forcing and doubles are for penalty.
    \item Pass shows a weak hand, with nowhere in particular to play.
    \item Suit bids are natural, 8--14, and promise 4 cards.
    \item 1NT shows a balanced hand, 8--14, with a club stop.
 	\end{itemize}
-\item 1C-(X) (takeout):
+\item 1$\clubsuit$-(X) (takeout):
 	\begin{itemize}
    \item Redouble still creates a forcing pass situation.
-   \item Ask opponents "takeout of what, exactly?".
+   \item Ask opponents ``takeout of what, exactly?".
    \item 1NT cannot show a stopper in any particular suit.
 	\end{itemize}
-\item 1C-(natural bid):
+\item 1$\clubsuit$-(natural bid):
 	\begin{itemize}
    \item Responder's double creates a game-force.
    \item 1NT promises a stop; 8--14 balanced.
@@ -782,16 +782,16 @@ are lebensohl responses. 4N is takeout over 4S and a big two suiter otherwise.
 	\end{itemize}
 \end{itemize}
 
-\subsection{Direct interference over 1D}
+\subsection{Direct interference over 1$\diamondsuit$}
 
 \begin{itemize}
-\item 1D-(X):
+\item 1$\diamondsuit$-(X):
 	\begin{itemize}
    \item Redouble with good 8+ hands.
    \item Pass with weak hands.
    \item Suit bids are natural, weak, 6-card suit.
 	\end{itemize}
-\item 1D-(bid):
+\item 1$\diamondsuit$-(bid):
 	\begin{itemize}
    \item Pass with weak hands.
    \item Double to establish a game-force (and forcing passes, etc.).
@@ -803,15 +803,15 @@ are lebensohl responses. 4N is takeout over 4S and a big two suiter otherwise.
 	\end{itemize}
 \end{itemize}
 
-\subsection{Balancing-seat interference (e.g. 1D-(P)-1S-(2C))}
+\subsection{Balancing-seat interference (e.g. 1$\diamondsuit$-(P)-1$\spadesuit$-(2$\clubsuit$))}
 
 \begin{itemize}
-\item 1C-(P)-1S-(anything):
-\item 1D-(P)-1S-(anything):
+\item 1$\clubsuit$-(P)-1$\spadesuit$-(anything):
+\item 1$\diamondsuit$-(P)-1$\spadesuit$-(anything):
 \begin{itemize}
    \item Passes are forcing
    \item NT bids promise a stopper.
-   \item Suction-style rebids are on if 3C is a sufficient bid (1D opener)
+   \item Suction-style rebids are on if 3$\clubsuit$ is a sufficient bid (1$\diamondsuit$ opener)
    \item Pass indicates a balanced hand without a stopper in opponents' suit.
 	\begin{itemize}
       \item Responder's NT bids here are Lebensohl style
@@ -820,9 +820,9 @@ are lebensohl responses. 4N is takeout over 4S and a big two suiter otherwise.
    \item Double is penalties.
 	\end{itemize}
 
-\item 1C-(P)-1D-(anything): it's a good idea to subside quietly.  
+\item 1$\clubsuit$-(P)-1$\diamondsuit$-(anything): it's a good idea to subside quietly.  
 
-\item 1C-(P)-1H-(anything): passes are non-forcing. 
+\item 1$\clubsuit$-(P)-1$\heartsuit$-(anything): passes are non-forcing. 
 \end{itemize}
 
 \section{Carding}
