--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -619,6 +619,9 @@ of responses.
 
 \subsection{Roman key-card Blackwood (3014)}
 
+Bids at the 5 level are exclusion blackwood. Responses are for keycards outside
+the suit bid, starting at the next bid.
+
 \subsection{First-round-control showing cues}
 
 Once a suit is agreed and a GF is established, new suits are cues.
